java opts added ruby paths added