@@ -1,1 +1,4 @@
 export JAVA_HOME="$(/usr/libexec/java_home)"
+
+#Add Some Optimizations
+#JAVA_OPTS='-Xss1m -Xmn512m -Xms2048m -Xmx2048m -XX:ReservedCodeCacheSize=128m -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M -XX:+UseConcMarkSweepGC'
